--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -22,3 +22,11 @@
   font-weight: bold;
   font-size: 1.3em;
 }
+
+#logo-white {
+  text-decoration: none;
+  color: white;
+  margin: 0;
+  font-weight: bold;
+  font-size: 5em;
+}
