--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="container nav-absolute d-flex align-items-center justify-content-between">
   <%= link_to root_path do %>
-   <h1 id='logo'>Beam</h1>
+   <h1 id='logo'>BEAM.</h1>
   <% end %>
   <div class="dropdown">
     <i class="fas fa-bars" data-bs-toggle="dropdown" aria-expanded="false"></i>
