--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -98,11 +98,11 @@
           <div class="form-group-container d-none d-flex flex-column justify-content-center align-items-center" data-edit-concerts-target="form">
             <%= link_to 'Discover', concert_path(concert), class: 'btn-orange mb-4' %>
             <% if current_user == nil %>
-              <button class="btn-orange "><%= button_to 'Join now', new_user_session_path, class:"joinBtn" %></button>
+             <%= button_to 'Join now', new_user_session_path, class:"joinBtn btn-orange" %>
             <% elsif UsersConcert.find_by(user_id: current_user.id, concert_id: concert.id)  %>
-              <button class="btn-orange"><%= link_to 'CHAT', chatroom_path(concert.chatroom) %></button>
+              <%= link_to 'CHAT', chatroom_path(concert.chatroom), class: 'btn-orange' %>
             <% else %>
-              <button class="btn-orange "><%= button_to 'Join now', concert_users_concerts_path(concert), class:"joinBtn" %></button>
+             <%= button_to 'Join now', concert_users_concerts_path(concert), class:"joinBtn btn-orange" %>
             <% end %>
           </div>
         </div>
