--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -8,7 +8,7 @@
                   <% photo = attendee.user.photo ? attendee.user.photo : "https://thumbs.dreamstime.com/b/default-avatar-profile-trendy-style-social-media-user-icon-187599373.jpg" %>
                   <%= image_tag photo, class: 'avatar-sm'  %>
                   <%= link_to user_path(attendee.user.id) do %>
-                    <p class="card-fullname"><%= attendee.user.username %></p>
+                    <p id="card-fullname"><%= attendee.user.username %></p>
                   <% end %>
                 </div>
               </div>
@@ -56,11 +56,11 @@
           <p><%= @attendees.count %> attending</p>
         </button>
         <% if current_user == nil %>
-          <button class="btn-orange "><%= button_to 'Join now', new_user_session_path, class:"joinBtn" %></button>
+          <%= button_to 'Join now', new_user_session_path, class:"joinBtn btn-orange" %>
         <% elsif UsersConcert.find_by(user_id: current_user.id, concert_id: @concert.id) %>
-          <button class="btn-orange"><%= link_to 'CHAT', chatroom_path(@concert.chatroom) %></button>
+          <%= link_to 'CHAT', chatroom_path(@concert.chatroom), class: 'btn-orange' %>
         <% else %>
-          <button class="btn-orange "><%= button_to 'Join now', concert_users_concerts_path(@concert), class:"joinBtn" %></button>
+          <%= button_to 'Join now', concert_users_concerts_path(@concert), class:"joinBtn btn-orange" %>
         <% end %>
       </div>
 
