--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -9,3 +9,8 @@
   background: linear-gradient(to left, #fece7bd8, #faa237); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
 }
+
+.full-page-orange  {
+  padding: 2em 0;
+  background: linear-gradient(to left, #fece7bd8, #faa237)
+}
