make drop down appear

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,10 +5,9 @@
 //   top: 0;
 // }
 
-// .nav-absolute {
-//   position: absolute;
-//   top: 0;
-// }
+.nav-absolute {
+  padding-bottom:133px;
+}
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
