added location and button to the card to make it fuller

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -103,3 +103,22 @@
     box-shadow: none;
   }
 }
+
+
+/* CSS */
+.button-11 {
+  padding: 6px 14px;
+  border-radius: 6px;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.301);
+  border: none;
+  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-11:focus {
+  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+  outline: 0;
+}
