--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -91,9 +91,9 @@
       <% @concerts.each do |concert| %>
         <div class="card card-animate card__background" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= concert.photo %>)" data-controller="edit-concerts" data-action="click->edit-concerts#displayForm">
           <div class="card__content">
-            <p class="card__category"><%= concert.date %></p>
             <h3 class="card__heading"><%= concert.artist %></h3>
-            <p class="card__category"><%= concert.address %></p>
+            <span class="card__category button-11">🗓 <%= concert.date.strftime("%d %b %Y") %></span>
+            <span class="card__category button-11">📍 <%= concert.venue %></span>
           </div>
           <div class="form-group-container d-none d-flex flex-column justify-content-center align-items-center" data-edit-concerts-target="form">
             <%= link_to 'Discover', concert_path(concert), class: 'btn-orange mb-4' %>
