--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -132,9 +132,8 @@ $br-radius: 2em;
   font-size: 0.9rem;
   margin-bottom: 8px;
   text-transform: uppercase;
+  display: inline-block;
 }
-
-
 
 .card  {
   position: relative;
