--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
-<nav class="container nav-absolute d-flex align-items-center justify-content-between">
+<nav class="container nav-absolute d-flex align-items-center justify-content-between" style="z-index:1000;">
   <%= link_to root_path do %>
    <h1 id='logo'>BEAM.</h1>
   <% end %>
   <div class="dropdown">
     <i class="fas fa-bars" data-bs-toggle="dropdown" aria-expanded="false"></i>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
     <% if user_signed_in? %>
       <%# <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
       <li><%= link_to "My Profile", user_path(current_user.id), class: "dropdown-item"%></li>
