--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-center">
+<div class="container-center">
   <div class="row justify-content-center">
     <div class="col-12">
       <div class="devise-text-content">
