--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,25 +1,40 @@
 .mapboxgl-popup {
-  max-width: 200px;
+  width: 800px;
 }
 
 .mapboxgl-popup-content {
   text-align: center;
   font-family: "Open Sans", sans-serif;
-  width: 100%;
   height: 100%;
+  min-width: 300px;
 }
+
+@media only screen and (min-width: 768px) {
+  .mapboxgl-popup-content {
+    min-width: 400px;
+  }
+  .mapboxgl-popup{
+    bottom: 2em;
+    left: 40vh;
+  }
+}
+
 .mapboxgl-popup{
   transform: unset !important;
   position: fixed;
-  bottom: 0;
-  left: 20px;
-  right: 20px;
+  bottom: 2em;
+  left: 3em;
   top: unset !important;
   // background-color: black;
 }
+
 .map_card_link{
   text-decoration: none;
 }
 .map_card_details{
   color: white
+}
+
+.mapboxgl-popup-tip {
+  display: none;
 }
