removed backgroud color of btn

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,10 @@
   padding-bottom:133px;
 }
 
+.removebackground > button{
+  background: none;
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
