margin in home page and card

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -21,7 +21,7 @@
 
 .mapboxgl-popup{
   transform: unset !important;
-  position: fixed;
+  position: absolute;
   bottom: 2em;
   left: 3em;
   top: unset !important;
