--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,32 +46,32 @@
     </div>
     <div class="value-container mt-5 w-30">
     <h2 class="mb-4 text-center"><strong>How beam works</strong></h2>
-    <p class="mb-4 text-center p-3 value-container_description">Meet new people who share your interests through online and in-person events. It’s free to create an account.</p>
+    <p class="mb-4 text-center p-3 value-container_description">Meet new people who share your same love for concerts and organize to go together! <strong>Start now.</strong> It’s free to create an account.</p>
     <div class="row my-5">
       <div class="col-12 col-lg-4">
         <div class="card-value">
-          <%= cl_image_tag("https://res.cloudinary.com/dqlkgz11b/image/upload/v1662992945/Beam-imgs/undraw_trip_re_f724_blljon.svg", class: 'card-value-img', crop: :fill) %>
+          <%= image_tag "undraw_buddies_2ae5.svg", class: 'card-value-img', crop: :fill %>
             <div class="card-text">
               <h3>Join a group</h3>
-              <p>Do what you love, meet others who love it, find your community. The rest is history!</p>
+              <p>Go to concert you love, meet others who love it, find your community. The rest is history!</p>
             </div>
         </div>
       </div>
       <div class="col-12 col-lg-4">
         <div class="card-value">
-          <%= cl_image_tag("https://res.cloudinary.com/dqlkgz11b/image/upload/v1662992943/Beam-imgs/undraw_team_up_re_84ok_rrwfs3.svg", class: 'card-value-img', crop: :fill) %>
+          <%= image_tag "undraw_trip_re_f724.svg", class: 'card-value-img', crop: :fill %>
           <div class="card-text">
           <h3>Chat with friends</h3>
-          <p>Do what you love, meet others who love it, find your community. The rest is history!</p>
+          <p>Find new friends and organize to go to concert together!</p>
           </div>
         </div>
       </div>
       <div class="col-12 col-lg-4">
         <div class="card-value">
-          <%= cl_image_tag("https://res.cloudinary.com/dqlkgz11b/image/upload/v1662992940/Beam-imgs/undraw_buddies_2ae5_n2exwp.svg", class: 'card-value-img', crop: :fill) %>
+          <%= image_tag "undraw_team_up_re_84ok.svg", class: 'card-value-img', crop: :fill %>
           <div class="card-text">
           <h3>Make new friends</h3>
-          <p>Do what you love, meet others who love it, find your community. The rest is history!</p>
+          <p>Share your passion, tell your story with your new friends and organize for the next concert together!</p>
           </div>
         </div>
       </div>
