--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,15 @@
   background: none;
 }
 
+.text-end-btn{
+  float: right;
+  background: none;
+  border: none;
+}
+
+.navbar-toggler{
+  border: none !important;
+}
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
