--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
     <%= render  "shared/navbar" %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <div class="fixmargintop">
+    <%# <div class="fixmargintop"> %>
       <%= yield %>
-    </div>
+    <%# </div> %>
   </body>
 </html>
