--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,48 @@
-<nav class="container nav-absolute d-flex align-items-center justify-content-between" style="z-index:1000;">
+<%# <nav class="container nav-absolute d-flex align-items-center justify-content-between" style="z-index:1000;">
   <%= link_to root_path do %>
+    <%# <h1 id='logo'>BEAM.</h1> %>
+
+  <%# <% end %>
+  <%# <div class="dropdown">
+    <i class="fas fa-bars" data-bs-toggle="dropdown" aria-expanded="false"></i>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1"> %>
+    <%# <% if user_signed_in? %>
+      <%# <li><%= link_to "My Profile", user_path(current_user.id), class: "dropdown-item"</li>  %>
+      <%# <li><%= link_to 'My Chats', chatrooms_path, class: "dropdown-item"</li> %>
+      <%# <li><hr class="dropdown-divider"></li> %>
+      <%# <li><%= button_to "Log out", destroy_user_session_url, method: :delete, class: "dropdown-item"</li>  %>
+    <%# <% else %>
+      <%# <li><%= link_to "sign in", new_user_session_path, class:"dropdown-item"</li>  %>
+      <%# <li><%= link_to "sign up", new_user_registration_path, class:"dropdown-item" </li>  %>
+    <%# <% end %>
+<%# </ul>
+  </div>
+</nav>  %>
+
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container-fluid">
+    <%= link_to root_path do %>
     <h1 id='logo'>BEAM.</h1>
 
   <% end %>
-  <div class="dropdown">
-    <i class="fas fa-bars" data-bs-toggle="dropdown" aria-expanded="false"></i>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-    <% if user_signed_in? %>
-      <li><%= link_to "My Profile", user_path(current_user.id), class: "dropdown-item"%></li>
-      <li><%= link_to 'My Chats', chatrooms_path, class: "dropdown-item" %></li>
-      <li><hr class="dropdown-divider"></li>
-      <li><%= button_to "Log out", destroy_user_session_url, method: :delete, class: "dropdown-item"%></li>
-    <% else %>
-      <li><%= link_to "sign in", new_user_session_path, class:"dropdown-item" %></li>
-      <li><%= link_to "sign up", new_user_registration_path, class:"dropdown-item"  %></li>
-    <% end %>
-    </ul>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <% if user_signed_in? %>
+
+        <li class="nav-item "><%= link_to "My Profile", user_path(current_user.id), class: "nav-link text-end" %></li>
+        <li class="nav-item "><%= link_to 'My Chats', chatrooms_path, class: "nav-link text-end"%></li>
+      <li class="nav-item "><hr class="dropdown-divider"></li>
+      <li class="nav-item "><%= button_to "Log out", destroy_user_session_url, method: :delete, class: "nav-link text-end-btn"%></li>
+        <% else %>
+          <li class="nav-item "><%= link_to "sign in", new_user_session_path, class:"nav-link text-end"%></li>
+          <li class="nav-item "><%= link_to "sign up", new_user_registration_path, class:"nav-link text-end"%> </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-</nav>
+</div>
