--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :meta_title, "Write a review for #{@reviewed_user.username}" %>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4">
