--- a/app/views/concerts/map.html.erb
+++ b/app/views/concerts/map.html.erb
@@ -1,3 +1,4 @@
+<% content_for :meta_title, "Beam Map" %>
 <div style="width: 100%; height: 100vh;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
