add backgroud color to navbar and make it sticky

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -36,10 +36,12 @@
   justify-content: space-around;
   display: flex;
 }
-nav{
+.stickynavbar{
   padding: 12px 16px ;
   position: sticky;
-  top: 0;
+  top: 10px;
   z-index: 999;
   height: 10%;
+  background-color: white;
+  opacity: 0.7;
 }
