--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
   </div>
 </nav>  %>
 
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar stickynavbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path do %>
     <h1 id='logo'>BEAM.</h1>
